--- a/Lucky28/Lucky28/JWShowHandTableViewCell.xib
+++ b/Lucky28/Lucky28/JWShowHandTableViewCell.xib
@@ -22,22 +22,13 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="pEY-WL-1MY">
+                    <slider opaque="NO" tag="521" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="pEY-WL-1MY">
                         <color key="tintColor" red="1" green="0.63952797651290894" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="176" id="QND-bT-s7K"/>
                             <constraint firstAttribute="height" constant="30" id="pSe-FR-cl4"/>
                         </constraints>
                     </slider>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vrU-Iq-Tbz">
-                        <constraints>
-                            <constraint firstAttribute="height" constant="48" id="NeX-GO-TiS"/>
-                            <constraint firstAttribute="width" constant="80" id="yay-tb-R9J"/>
-                        </constraints>
-                        <state key="normal" title="全额梭哈" backgroundImage="BetBox">
-                            <color key="titleColor" red="0.62347543239593506" green="0.62356525659561157" blue="0.6234472393989563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </state>
-                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2H-kJ-1dq">
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="8RZ-72-uca"/>
@@ -47,16 +38,7 @@
                             <color key="titleColor" red="0.62347543239593506" green="0.62356525659561157" blue="0.6234472393989563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNd-nB-qqi">
-                        <constraints>
-                            <constraint firstAttribute="height" constant="48" id="AKy-9z-42Q"/>
-                            <constraint firstAttribute="width" constant="80" id="QeD-Jl-HPb"/>
-                        </constraints>
-                        <state key="normal" title="输入金额" backgroundImage="BetBox">
-                            <color key="titleColor" red="0.74173468351364136" green="0.73732632398605347" blue="0.74512451887130737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </state>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(100)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfU-W1-g7Q">
+                    <label opaque="NO" userInteractionEnabled="NO" tag="511" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(100)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfU-W1-g7Q">
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="RF8-Tq-3wK"/>
                         </constraints>
@@ -73,6 +55,16 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" tag="531" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vrU-Iq-Tbz">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="48" id="NeX-GO-TiS"/>
+                            <constraint firstAttribute="width" constant="80" id="yay-tb-R9J"/>
+                        </constraints>
+                        <state key="normal" title="全额梭哈" backgroundImage="BetBox">
+                            <color key="titleColor" red="0.62347543239593506" green="0.62356525659561157" blue="0.6234472393989563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </state>
+                        <state key="selected" backgroundImage="DoneButton"/>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" red="0.96070355176925659" green="0.96083801984786987" blue="0.96066111326217651" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
@@ -83,20 +75,25 @@
                     <constraint firstItem="MfU-W1-g7Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="IhI-fh-NX5"/>
                     <constraint firstItem="Rt2-ae-w03" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="L9I-QD-Lt3"/>
                     <constraint firstAttribute="trailing" secondItem="Rt2-ae-w03" secondAttribute="trailing" id="NN7-F2-MVn"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="TNd-nB-qqi" secondAttribute="bottom" constant="6" id="Qz3-3s-5A8"/>
-                    <constraint firstItem="vrU-Iq-Tbz" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.63" id="RKJ-SX-0AS"/>
+                    <constraint firstItem="vrU-Iq-Tbz" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="0.83" id="RKJ-SX-0AS"/>
                     <constraint firstAttribute="bottomMargin" secondItem="P2H-kJ-1dq" secondAttribute="bottom" constant="6" id="VDm-iv-cSj"/>
-                    <constraint firstItem="P2H-kJ-1dq" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.1" id="YYU-lb-kme"/>
+                    <constraint firstItem="P2H-kJ-1dq" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.34" id="YYU-lb-kme"/>
                     <constraint firstItem="pEY-WL-1MY" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.08" id="Z49-P1-RTC"/>
-                    <constraint firstItem="TNd-nB-qqi" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1.57" id="fW0-vF-tgG"/>
                     <constraint firstItem="Duj-MT-eUP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="oO0-JG-zSr"/>
                     <constraint firstItem="Rt2-ae-w03" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pWy-Ho-RaS"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="Inverse" destination="P2H-kJ-1dq" id="nn9-Lj-Xmz"/>
+                <outlet property="ShowHand" destination="vrU-Iq-Tbz" id="9Bx-FV-hcj"/>
+                <outlet property="ShowHandSlider" destination="pEY-WL-1MY" id="dha-oQ-VbZ"/>
+                <outlet property="SliderValue" destination="MfU-W1-g7Q" id="CV3-yt-SNt"/>
+            </connections>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="BetBox" width="80" height="48"/>
+        <image name="DoneButton" width="68" height="34"/>
     </resources>
 </document>
